# CDGuardCancel

./: .gitignore  3way_results.txt  CDAnimCancel.ini  CDGuardCancel.ini  CMakeLists.txt  CONDITION_PROBE_PLAN.md  Crimson_Desert_AnimCancel_Research.md  FINAL_STATUS.md  HANDOFF_PROMPT.md  HANDOVER_REPORT.md  NEXUS_DESCRIPTION.md  PROBE_TEST_LOG.csv  PROBE_TEST_WORKFLOW.md  PROGRESS_UPDATE.md  PROGRESS_UPDATE_2.md  PROGRESS_UPDATE_3.md  PROGRESS_UPDATE_4.md  PROGRESS_UPDATE_5.md  README.md  build.bat  diff_results.txt  extract_paac.py  find_inputblock.py  find_objects.py  find_player_chart.py  monitor.py  monitor2.py  monitor2_log.txt  monitor_log.txt  owner_candidates.txt  patch_inputblock.py  patch_transitions.py  readfile_probe.py  scan_3way.py  scan_attack.py  scan_diff.py  scan_focused.py  step1_find_owner.py  step4_monitor_owners.py  step4b_topdown.py  (+2 more)
injector/: ActionMonitor.cs  GuardCancel.cs  GuardCancelInjector.cs  GuardCancelV2.cs  GuardScanner.cs  GuardStateScanner.cs  Program.cs  SimpleMonitor.cs  WideMonitor.cs  guard_cancel_injector.bat  guard_scanner.bat  guard_state_results.txt  guard_state_scanner.bat
src/: dllmain.cpp
tools/: analyze_condition_family_clusters.py  analyze_condition_structure.py  build_condition_patch.py  build_guard_patch.py  compare_guard_blocks.py  condition_family_13001_clusters.txt  condition_graph_analysis.txt  condition_graph_deep.py  condition_graph_final.py  condition_graph_patch_candidates.py  condition_graph_patch_candidates.txt  condition_graph_re.py  condition_probe_ranking.txt  cross_tabulate_fields.py  dagger_analysis.txt  (+25 more)
